tests/ui/consts/missing_span_in_backtrace.stderr
error[E0080]: unable to copy parts of a pointer from memory at ALLOC0
  --> $DIR/missing_span_in_backtrace.rs:14:9
   |
14 | /         ptr::swap_nonoverlapping(
15 | |             &mut ptr1 as *mut _ as *mut MaybeUninit<u8>,
16 | |             &mut ptr2 as *mut _ as *mut MaybeUninit<u8>,
17 | |             mem::size_of::<&i32>(),
18 | |         );
   | |_________^ evaluation of constant value failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported
note: inside `swap_nonoverlapping::compiletime::<MaybeUninit<u8>>`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `std::ptr::swap_nonoverlapping_const::<MaybeUninit<u8>>`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `std::ptr::copy_nonoverlapping::<MaybeUninit<u8>>`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
